<resources>
    <string name="app_name">CalorieMate</string>
    <string name="title_visualisation">Visualisation</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_add">Add Meal</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">My Profile</string>
    <string name="title_dashboard_calorie_budget">Calorie Budget</string>
    <string name="value_dashboard_calorie_budget">1766</string>
    <string name="value_dashboard_breakfast_calories">66</string>
    <string name="title_dashboard_breakfast_calories">Breakfast</string>
    <string name="title_dashboard_lunch_calories">Lunch</string>
    <string name="value_dashboard_lunch_calories">0</string>
    <string name="title_dashboard_dinner_calories">Dinner</string>
    <string name="value_dashboard_dinner_calories">0</string>
    <string name="title_dashboard_snacks_calories">Snacks</string>
    <string name="value_dashboard_snacks_calories">0</string>
    <string name="value_dashboard_left_calories">1700</string>
    <string name="title_dashboard_left_calories">Left</string>
    <string name="title_dashboard_exercise">Exercise</string>
    <string name="value_dashboard_exercise_calories">0</string>
    <string name="title_dashboard_water_calories">Water</string>
    <string name="value_dashboard_water_calories">0</string>
    <string name="title_dashboard_goal_plan">My Weight Goal Plan</string>
    <string name="value_dashboard_weight_now">__ kg</string>
    <string name="title_dashboard_weight_now">Now</string>
    <string name="value_dashboard_weight_future">__ kg</string>
    <string name="value_dashboard_future_date">___ __</string>
    <string name="value_dashboard_cal_completed">0 %</string>
    <string name="label_dashboard_cal_completed">Completed</string>
    <string name="title_program_step1">Lets build your program</string>
    <string name="title_program_step1_gender">Gender</string>
    <string name="label_program_step1_gender_male">Male</string>
    <string name="label_program_step1_gender_female">Female</string>
    <string name="label_program_step1_weight">Weight</string>
    <string name="label_program_setp1_weightKg">kg</string>
    <string name="label_program_step1_height">Height</string>
    <string name="label_program_step1_heightCm">cm</string>
    <string name="label_program_step1_dob">DOB</string>
    <string name="title_program_step1_program_type">Select your program</string>
    <string name="label_program_step1_type_lose">Lose weight</string>
    <string name="label_program_step1_type_gain">Gain weight</string>
    <string name="label_program_next">Next</string>
    <string name="title_program_step2_activity_level">Level of physical activity</string>
    <string name="label_program_step2_activity_sedentary">Sedentary (little or no exercise)</string>
    <string name="label_program_step2_activity_lightly">Lightly active</string>
    <string name="label_program_step2_activity_moderate">Moderately active</string>
    <string name="label_program_step2_acitivity_very">Very active</string>
    <string name="label_program_step2_acitivity_super">Super active</string>
    <string name="label_program_finish">Finish</string>
    <string name="label_program_back">Back</string>
    <string name="title_program_step2_final_result">This is your program</string>
    <string name="label_program_step2_final_info"></string>
    <string name="label_program_backto_login">Back to login</string>
    <string name="label_start_line_1">Track what you eat</string>
    <string name="label_start_line_2">Follow a calorie budget</string>
    <string name="label_start_line_3">Reach your goal</string>
    <string name="label_start_get_started">Get Started</string>
    <string name="label_start_sign_in">Sign In</string>
    <string name="label_signup_username">Username</string>
    <string name="label_signup_password">Password</string>
    <string name="label_button_signup">Sign Up</string>
    <string name="label_button_login">Login</string>
    <string name="label_login_forget_password">forget password</string>
    <string name="title_login_other_logins">or Sign in with</string>
    <string name="label_login_with_google">Google</string>
    <string name="label_program_create_profile">Create Profile</string>
    <string name="label_program_step2_daily_calorie">Daily Calorie Intake :</string>
    <string name="value_program_step2_daily_calorie">____</string>
    <string name="label_add_meal_meal_type">Meal</string>
    <string name="btn_label_add_meal">Add</string>
    <string name="buttonLableLogout">Logout</string>
    <string name="lable_profile_username">Username</string>
    <string name="label_profile_password">Password</string>
    <string name="label_profile_firstname">First Name</string>
    <string name="label_profile_lastname">Last Name</string>
    <string name="button_label_profile_update">Update</string>
    <string name="label_date_format_hint">2000-10-31</string>

    <string-array name="meal_type_items">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks</item>
    </string-array>

</resources>