<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_visualisation"
        android:icon="@drawable/ic_visualisation_24"
        android:title="@string/title_visualisation" />

    <item
        android:id="@+id/navigation_add"
        android:title=""
        />

<!--    <item-->
<!--        android:id="@+id/navigation_add"-->
<!--        android:title=""-->
<!--        android:enabled="false"-->
<!--        />-->

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_my_profile_24"
        android:title="@string/title_profile" />

</menu>